// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsPageLayout Body should match snapshot for body 1`] = `
<div
  class="grid grid--loose"
  data-testid="body"
>
  <div
    class="hide-print"
    data-g="12 md:4 lg:3"
  >
    <button
      aria-expanded="false"
      aria-label="Expand menu for About"
      class="toggleButton"
      type="button"
    >
      About
       
      <svg
        aria-hidden="true"
        class="icon"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26z"
          fill="currentColor"
        />
      </svg>
    </button>
    Menu
  </div>
  <div
    data-g="12 md:8 lg:9"
  >
    <div
      class="grid grid--rev grid--loose"
    >
      <div
        data-g="12 lg:3"
      >
        <nav
          aria-labelledby="on-this-page"
          class="wrapper"
        >
          <h2
            class="heading"
            id="on-this-page"
          >
            On this page
          </h2>
          <ol
            aria-label="Jump links to sections on this page"
            class="list"
          >
            <li>
              <a
                href="#test-1"
              >
                Test 1
              </a>
            </li>
            <li>
              <a
                href="#test-2"
              >
                Test 2
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="body"
        data-g="12 lg:9"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsPageLayout Body should match snapshot for body with no menu 1`] = `
<div
  class="grid grid--loose"
  data-testid="body"
>
  <div
    data-g="12 md:12 lg:12"
  >
    <div
      class="grid grid--rev grid--loose"
    >
      <div
        data-g="12 lg:3"
      >
        <nav
          aria-labelledby="on-this-page"
          class="wrapper"
        >
          <h2
            class="heading"
            id="on-this-page"
          >
            On this page
          </h2>
          <ol
            aria-label="Jump links to sections on this page"
            class="list"
          >
            <li>
              <a
                href="#test-1"
              >
                Test 1
              </a>
            </li>
            <li>
              <a
                href="#test-2"
              >
                Test 2
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="body"
        data-g="12 lg:9"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;
